# FuzzyQuant-RL

./: .gitignore  README.md  pyproject.toml  test.py
config/: dev.yaml
src/: main.py
src/agents/: qlearning_agent.py
src/core/: config.py  logger.py
src/data/: indicators.py
src/envs/: trading_env.py
src/fuzzy/: mock_converter.py
