[project]
name = "fuzzyquant-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "ta>=0.11.0",
    "typer>=0.26.3",
    "yfinance>=1.4.1",
]
